# entropy-core

./: .cargo-remote.toml  .dockerignore  .editorconfig  .gitignore  .rustfmt.toml  .taplo.toml  0  1  CHANGELOG.md  Cargo.toml  Dockerfile  Makefile  README.md  RELEASE_CHECKLIST.md  Rocket.toml  cliff.toml  deny.toml  docker-compose-common.yaml  docker-compose.yaml  entropy_metadata.json  rust-toolchain.toml  rustfmt.toml
alice/: Cargo.toml
alice-send/: Cargo.toml  local-share2.json  local-share3.json
alice-send/src/: lib.rs  main.rs  tests.rs
crates/chain-api/: Cargo.toml  entropy_metadata.scale
crates/chain-api/src/: lib.rs
crates/client/: Cargo.toml  Makefile  build.rs  entropy_metadata.scale  js-README.md
crates/client/nodejs-test/: README.md  index.js  package.json
crates/client/src/: attestation.rs  chain_api.rs  client.rs  errors.rs  forest.rs  lib.rs  logger.rs  substrate.rs  tests.rs  user.rs  util.rs  wasm.rs
crates/kvdb/: Cargo.toml  MIT-LICENSE  README.md
crates/kvdb/src/: lib.rs
crates/protocol/: Cargo.toml  Makefile  README.md  js-README.md
crates/protocol/benches/: protocol_parties.rs
crates/protocol/nodejs-test/: index.js  index.test.js  package.json
crates/protocol/src/: errors.rs  execute_protocol.rs  lib.rs  listener.rs  protocol_message.rs
crates/protocol/tests/: make_centralized.rs  parties.rs  protocol.rs  test_sign.rs
crates/shared/: Cargo.toml  README.md  device_key_proxy.wasm  example_barebones_with_auxilary.wasm
crates/shared/src/: attestation.rs  constants.rs  lib.rs  tss_node_info.rs  types.rs  user.rs
crates/test-cli/: Cargo.toml  README.md  getting-started.md
crates/test-cli/src/: lib.rs  main.rs
crates/testing-utils/: Cargo.toml  example_barebones_with_auxilary.wasm  example_custom_hash.wasm  example_noop.wasm  faucet_program.wasm  infinite_loop.wasm  oracle_example.wasm  template_barebones.wasm  template_basic_transaction.wasm
crates/testing-utils/keyshares/: README.md  eve-keyshare-held-by-alice.keyshare  eve-keyshare-held-by-bob.keyshare  eve-keyshare-held-by-charlie.keyshare
crates/testing-utils/src/: constants.rs  create_test_keyshares.rs  helpers.rs  lib.rs  main.rs  node_proc.rs  substrate_context.rs  tss_server_process.rs
crates/threshold-signature-server/: Cargo.toml  README.md  comment.md  entropy_metadata.scale
crates/threshold-signature-server/src/: chain_api.rs  common.rs  lib.rs  main.rs  sign_init.rs
crates/threshold-signature-server/tests/: full.rs  jumpstart_register_sign.rs  protocol_wasm.rs  register_and_sign.rs  register_sign_reshare_sign.rs  sign.rs  sign_eth_tx.rs
crates/tss-client-common/: Cargo.toml
crates/tss-client-common/src/: lib.rs  substrate.rs  user.rs
crypto/common/: Cargo.toml
crypto/common/src/: cm_info.rs  common.rs  lib.rs
crypto/constraints/: Cargo.toml
crypto/constraints/src/: architectures.rs  constraint.rs  constraints.rs  lib.rs  tests.rs  tx.rs  utils.rs  whitelist.rs
crypto/etp-lindell17/: Cargo.toml
crypto/etp-lindell17/src/: common.rs  cryptoerror.rs  lib.rs  party_one.rs
crypto/kvdb/: Cargo.toml
crypto/kvdb/src/: lib.rs
crypto/protocol/: Cargo.toml  Makefile  README.md  js-README.md
crypto/protocol/nodejs-test/: index.js  package.json
crypto/protocol/src/: centralized_keygen.rs  common.rs  dfkeygen.rs  entropy_metadata.scale  errors.rs  execute_protocol.rs  gg20_sm_client.rs  gg20_sm_manager.rs  keygen.rs  lib.rs  main.rs  node.rs  noise.rs  note.org  protocol_message.rs  sign.rs  signer.rs  tests.rs  user.rs
crypto/server/: .gitignore  Cargo.toml  build.rs  entropy_metadata.scale
crypto/server/src/: chain_api.rs  cmain.rs  common.rs  lib.rs  main.rs  message.rs  sign_init.rs  utils.rs
crypto/server/tests/: protocol_wasm.rs  sign.rs
crypto/shared/: Cargo.toml  shared-types-sdk.ts
crypto/shared/src/: constraints.rs  lib.rs  types.rs
crypto/signing-client/: Cargo.toml  Rocket.toml  entropy_metadata.scale
crypto/signing-client/src/: api.rs  com_manager.rs  context.rs  errors.rs  init.rs  ip_discovery.rs  main.rs  party_info.rs  protocol_manager.rs  request_guards.rs  sign.rs  store_share.rs  subscriber.rs  tests.rs
crypto/substrate-common/: Cargo.toml  README.md
crypto/substrate-common/src/: constraints.rs  lib.rs  types.rs
crypto/test-cli/: Cargo.toml  README.md
crypto/test-cli/src/: main.rs
crypto/testing-user-clients/: Cargo.toml
crypto/testing-user-clients/src/: lib.rs  testkeygen.rs  testregister.rs  testsign.rs
crypto/testing-utils/: Cargo.toml  example_barebones_with_extra.wasm  template_barebones.wasm
crypto/testing-utils/src/: chain_api.rs  constants.rs  context.rs  lib.rs  main.rs  node_proc.rs  substrate_context.rs  tss_server_proc.rs
crypto/user-protocol2/: Cargo.toml
node/: Cargo.toml  tmp.txt
node/cli/: Cargo.toml  Chainspec-README.md  build.rs
node/cli/src/: admin.rs  benchmarking.rs  chain_spec.rs  cli.rs  command.rs  endowed_accounts.rs  main.rs  rpc.rs  service.rs
node/cli/test-chainspec-inputs/: example-chainspec-inputs.json
node/executor/: Cargo.toml
node/executor/src/: lib.rs
node/rpc/: Cargo.toml
node/rpc-api/: Cargo.toml
node/rpc-api/src/: lib.rs  staking_extension.rs
node/rpc/src/: lib.rs
node/src/: chain_spec.rs  command.rs  rpc.rs  service.rs
runtime/: Cargo.toml  build.rs
runtime/src/: constants.rs  impls.rs  lib.rs  voter_bags.rs
runtime/src/weights/: frame_benchmarking.rs  frame_election_provider_support.rs  frame_system.rs  mod.rs  pallet_attestation.rs  pallet_babe.rs  pallet_bags_list.rs  pallet_balances.rs  pallet_bounties.rs  pallet_collective.rs  pallet_constraints.rs  pallet_democracy.rs  pallet_election_provider_multi_phase.rs  pallet_elections_phragmen.rs  pallet_entropy_registy.rs  pallet_entropy_staking_extension.rs  pallet_entropy_transaction_pause.rs  pallet_forest.rs  pallet_free_tx.rs  pallet_grandpa.rs  pallet_identity.rs  pallet_im_online.rs  pallet_indices.rs  pallet_membership.rs  pallet_multisig.rs  pallet_nomination_pools.rs  pallet_offences.rs  (+24 more)
subxttest/: Cargo.toml
subxttest/src/: entropy_metadata.scale  main.rs
(+540 files in other folders)
