[profile.release]
panic = 'unwind'

[workspace]
members = [
    'crypto/grpc-client-server/client',
    'crypto/grpc-client-server/server',
    'crypto/grpc-client-server/grpc',
    'crypto/protocol',
    'crypto/signing-client',
    'crypto/testing-user-clients',
	'crypto/testing-utils',
    'node/*',
    'pallets/*',
    'runtime',
	# 'alice-send',
    # 'subxttest'
]
